--- a/src/njk/pages/program.njk
+++ b/src/njk/pages/program.njk
@@ -265,7 +265,7 @@
 									<div class="row">
 										<div class="col-12">
 											<div class="wysiwyg">
-												<p>“I appreciate the Big Data program at Emory and the whole experience of participating in events -- and for the extra offerings of help. I felt that no other program has this type of commitment and out of the way offering of help. Just wanted to share my appreciation.”</p>
+												<p>“I appreciate the Big Data program at Emory and the whole experience of participating in events — and for the extra offerings of help. I felt that no other program has this type of commitment and out of the way offering of help. Just wanted to share my appreciation.”</p>
 											</div>
 											<!-- /.wysiwyg -->
 											<div class="carousel-testimonial__name">Suneetha V.</div>
