Changed placeholder thumbs

--- a/src/njk/pages/certificate-programs.njk
+++ b/src/njk/pages/certificate-programs.njk
@@ -31,7 +31,7 @@
 							<div class="row h-100">
 								<div class="col-sm-4">
 									<div class="card-actions__img-wrap">
-										<img class="card-actions__img d-none d-sm-block" src="https://unsplash.it/300?random" alt="" />
+										<img class="card-actions__img d-none d-sm-block" src="{{ includePath }}images/placeholders/program-thumb.jpg" alt="" />
 										<a href="program.html#webinars" class="badge badge-light card-actions__badge">Webinar</a>
 									</div>
 									<!-- /.card-actions__img -->
@@ -71,7 +71,7 @@
 							<div class="row h-100">
 								<div class="col-sm-4">
 									<div class="card-actions__img-wrap">
-										<img class="card-actions__img d-none d-sm-block" src="https://unsplash.it/300?random" alt="" />
+										<img class="card-actions__img d-none d-sm-block" src="{{ includePath }}images/placeholders/program-thumb.jpg" alt="" />
 										<a href="program.html#webinars" class="badge badge-light card-actions__badge">Webinar</a>
 									</div>
 									<!-- /.card-actions__img -->
@@ -111,7 +111,7 @@
 							<div class="row h-100">
 								<div class="col-sm-4">
 									<div class="card-actions__img-wrap">
-										<img class="card-actions__img d-none d-sm-block" src="https://unsplash.it/300?random" alt="" />
+										<img class="card-actions__img d-none d-sm-block" src="{{ includePath }}images/placeholders/program-thumb.jpg" alt="" />
 										<a href="program.html#webinars" class="badge badge-light card-actions__badge">Webinar</a>
 									</div>
 									<!-- /.card-actions__img -->
@@ -151,7 +151,7 @@
 							<div class="row h-100">
 								<div class="col-sm-4">
 									<div class="card-actions__img-wrap">
-										<img class="card-actions__img d-none d-sm-block" src="https://unsplash.it/300?random" alt="" />
+										<img class="card-actions__img d-none d-sm-block" src="{{ includePath }}images/placeholders/program-thumb.jpg" alt="" />
 									</div>
 									<!-- /.card-actions__img -->
 								</div>
@@ -189,7 +189,7 @@
 							<div class="row h-100">
 								<div class="col-sm-4">
 									<div class="card-actions__img-wrap">
-										<img class="card-actions__img d-none d-sm-block" src="https://unsplash.it/300?random" alt="" />
+										<img class="card-actions__img d-none d-sm-block" src="{{ includePath }}images/placeholders/program-thumb.jpg" alt="" />
 									</div>
 									<!-- /.card-actions__img -->
 								</div>
@@ -228,7 +228,7 @@
 							<div class="row h-100">
 								<div class="col-sm-4">
 									<div class="card-actions__img-wrap">
-										<img class="card-actions__img d-none d-sm-block" src="https://unsplash.it/300?random" alt="" />
+										<img class="card-actions__img d-none d-sm-block" src="{{ includePath }}images/placeholders/program-thumb.jpg" alt="" />
 										<a href="program.html#webinars" class="badge badge-light card-actions__badge">Webinar</a>
 									</div>
 									<!-- /.card-actions__img -->
@@ -268,7 +268,7 @@
 							<div class="row h-100">
 								<div class="col-sm-4">
 									<div class="card-actions__img-wrap">
-										<img class="card-actions__img d-none d-sm-block" src="https://unsplash.it/300?random" alt="" />
+										<img class="card-actions__img d-none d-sm-block" src="{{ includePath }}images/placeholders/program-thumb.jpg" alt="" />
 										<a href="program.html#webinars" class="badge badge-light card-actions__badge">Info Session</a>
 										<a href="program.html#webinars" class="badge badge-light card-actions__badge">Webinar</a>
 									</div>
@@ -309,7 +309,7 @@
 							<div class="row h-100">
 								<div class="col-sm-4">
 									<div class="card-actions__img-wrap">
-										<img class="card-actions__img d-none d-sm-block" src="https://unsplash.it/300?random" alt="" />
+										<img class="card-actions__img d-none d-sm-block" src="{{ includePath }}images/placeholders/program-thumb.jpg" alt="" />
 										<a href="program.html#webinars" class="badge badge-light card-actions__badge">Webinar</a>
 									</div>
 									<!-- /.card-actions__img -->
@@ -349,7 +349,7 @@
 							<div class="row h-100">
 								<div class="col-sm-4">
 									<div class="card-actions__img-wrap">
-										<img class="card-actions__img d-none d-sm-block" src="https://unsplash.it/300?random" alt="" />
+										<img class="card-actions__img d-none d-sm-block" src="{{ includePath }}images/placeholders/program-thumb.jpg" alt="" />
 										<a href="program.html#webinars" class="badge badge-light card-actions__badge">Webinar</a>
 									</div>
 									<!-- /.card-actions__img -->
@@ -389,7 +389,7 @@
 							<div class="row h-100">
 								<div class="col-sm-4">
 									<div class="card-actions__img-wrap">
-										<img class="card-actions__img d-none d-sm-block" src="https://unsplash.it/300?random" alt="" />
+										<img class="card-actions__img d-none d-sm-block" src="{{ includePath }}images/placeholders/program-thumb.jpg" alt="" />
 									</div>
 									<!-- /.card-actions__img -->
 								</div>
@@ -427,7 +427,7 @@
 							<div class="row h-100">
 								<div class="col-sm-4">
 									<div class="card-actions__img-wrap">
-										<img class="card-actions__img d-none d-sm-block" src="https://unsplash.it/300?random" alt="" />
+										<img class="card-actions__img d-none d-sm-block" src="{{ includePath }}images/placeholders/program-thumb.jpg" alt="" />
 										<a href="program.html#webinars" class="badge badge-light card-actions__badge">Info Session</a>
 										<a href="program.html#webinars" class="badge badge-light card-actions__badge">Webinar</a>
 									</div>
@@ -468,7 +468,7 @@
 							<div class="row h-100">
 								<div class="col-sm-4">
 									<div class="card-actions__img-wrap">
-										<img class="card-actions__img d-none d-sm-block" src="https://unsplash.it/300?random" alt="" />
+										<img class="card-actions__img d-none d-sm-block" src="{{ includePath }}images/placeholders/program-thumb.jpg" alt="" />
 									</div>
 									<!-- /.card-actions__img -->
 								</div>
@@ -507,7 +507,7 @@
 							<div class="row h-100">
 								<div class="col-sm-4">
 									<div class="card-actions__img-wrap">
-										<img class="card-actions__img d-none d-sm-block" src="https://unsplash.it/300?random" alt="" />
+										<img class="card-actions__img d-none d-sm-block" src="{{ includePath }}images/placeholders/program-thumb.jpg" alt="" />
 										<a href="program.html#webinars" class="badge badge-light card-actions__badge">Info Session</a>
 										<a href="program.html#webinars" class="badge badge-light card-actions__badge">Webinar</a>
 									</div>
@@ -548,7 +548,7 @@
 							<div class="row h-100">
 								<div class="col-sm-4">
 									<div class="card-actions__img-wrap">
-										<img class="card-actions__img d-none d-sm-block" src="https://unsplash.it/300?random" alt="" />
+										<img class="card-actions__img d-none d-sm-block" src="{{ includePath }}images/placeholders/program-thumb.jpg" alt="" />
 									</div>
 									<!-- /.card-actions__img -->
 								</div>
@@ -587,7 +587,7 @@
 							<div class="row h-100">
 								<div class="col-sm-4">
 									<div class="card-actions__img-wrap">
-										<img class="card-actions__img d-none d-sm-block" src="https://unsplash.it/300?random" alt="" />
+										<img class="card-actions__img d-none d-sm-block" src="{{ includePath }}images/placeholders/program-thumb.jpg" alt="" />
 										<a href="program.html#webinars" class="badge badge-light card-actions__badge">Webinar</a>
 									</div>
 									<!-- /.card-actions__img -->
@@ -627,7 +627,7 @@
 							<div class="row h-100">
 								<div class="col-sm-4">
 									<div class="card-actions__img-wrap">
-										<img class="card-actions__img d-none d-sm-block" src="https://unsplash.it/300?random" alt="" />
+										<img class="card-actions__img d-none d-sm-block" src="{{ includePath }}images/placeholders/program-thumb.jpg" alt="" />
 										<a href="program.html#webinars" class="badge badge-light card-actions__badge">Webinar</a>
 									</div>
 									<!-- /.card-actions__img -->
@@ -667,7 +667,7 @@
 							<div class="row h-100">
 								<div class="col-sm-4">
 									<div class="card-actions__img-wrap">
-										<img class="card-actions__img d-none d-sm-block" src="https://unsplash.it/300?random" alt="" />
+										<img class="card-actions__img d-none d-sm-block" src="{{ includePath }}images/placeholders/program-thumb.jpg" alt="" />
 										<a href="program.html#webinars" class="badge badge-light card-actions__badge">Webinar</a>
 									</div>
 									<!-- /.card-actions__img -->
@@ -707,7 +707,7 @@
 							<div class="row h-100">
 								<div class="col-sm-4">
 									<div class="card-actions__img-wrap">
-										<img class="card-actions__img d-none d-sm-block" src="https://unsplash.it/300?random" alt="" />
+										<img class="card-actions__img d-none d-sm-block" src="{{ includePath }}images/placeholders/program-thumb.jpg" alt="" />
 										<a href="program.html#webinars" class="badge badge-light card-actions__badge">Info Session</a>
 										<a href="program.html#webinars" class="badge badge-light card-actions__badge">Webinar</a>
 									</div>
@@ -748,7 +748,7 @@
 							<div class="row h-100">
 								<div class="col-sm-4">
 									<div class="card-actions__img-wrap">
-										<img class="card-actions__img d-none d-sm-block" src="https://unsplash.it/300?random" alt="" />
+										<img class="card-actions__img d-none d-sm-block" src="{{ includePath }}images/placeholders/program-thumb.jpg" alt="" />
 										<a href="program.html#webinars" class="badge badge-light card-actions__badge">Webinar</a>
 									</div>
 									<!-- /.card-actions__img -->
@@ -788,7 +788,7 @@
 							<div class="row h-100">
 								<div class="col-sm-4">
 									<div class="card-actions__img-wrap">
-										<img class="card-actions__img d-none d-sm-block" src="https://unsplash.it/300?random" alt="" />
+										<img class="card-actions__img d-none d-sm-block" src="{{ includePath }}images/placeholders/program-thumb.jpg" alt="" />
 										<a href="program.html#webinars" class="badge badge-light card-actions__badge">Webinar</a>
 									</div>
 									<!-- /.card-actions__img -->
@@ -828,7 +828,7 @@
 							<div class="row h-100">
 								<div class="col-sm-4">
 									<div class="card-actions__img-wrap">
-										<img class="card-actions__img d-none d-sm-block" src="https://unsplash.it/300?random" alt="" />
+										<img class="card-actions__img d-none d-sm-block" src="{{ includePath }}images/placeholders/program-thumb.jpg" alt="" />
 										<a href="program.html#webinars" class="badge badge-light card-actions__badge">Webinar</a>
 									</div>
 									<!-- /.card-actions__img -->
