--- a/src/njk/pages/corporate.njk
+++ b/src/njk/pages/corporate.njk
@@ -27,23 +27,23 @@
 									<div class="sidebar-card__section">
 										<p class="h5 subheading mb-3">Contact Us to Get Started</p>
 										<div class="form-group">
-											<label for="firstName" class="small">First Name *</label>
+											<label for="firstName" class="small">First Name <span class="text-danger">*</span></label>
 											<input type="text" class="form-control" id="firstName">
 										</div>
 										<div class="form-group">
-											<label for="lastName" class="small">Last Name *</label>
+											<label for="lastName" class="small">Last Name <span class="text-danger">*</span></label>
 											<input type="text" class="form-control" id="lastName">
 										</div>
 										<div class="form-group">
-											<label for="email" class="small">Email *</label>
+											<label for="email" class="small">Email <span class="text-danger">*</span></label>
 											<input type="email" class="form-control" id="email">
 										</div>
 										<div class="form-group">
-											<label for="tel" class="small">Telephone Number *</label>
+											<label for="tel" class="small">Telephone Number <span class="text-danger">*</span></label>
 											<input type="tel" class="form-control" id="tel">
 										</div>
 										<div class="form-group">
-											<label for="org" class="small">Organization Name *</label>
+											<label for="org" class="small">Organization Name <span class="text-danger">*</span></label>
 											<input type="text" class="form-control" id="org">
 										</div>
 										<div class="form-group">
