Added collapsed class to buttons to fix icon behavior

--- a/src/njk/templates/partials/component/accordion.njk
+++ b/src/njk/templates/partials/component/accordion.njk
@@ -2,7 +2,7 @@
 	<div class="card">
 		<div class="card-header" id="headingOne">
 			<div class="h5 mb-0">
-				<button class="btn btn-link" data-toggle="collapse" data-target="#collapseOne" aria-expanded="false" aria-controls="collapseOne">Why do I need to create an account, and how do I create one?</button>
+				<button class="btn btn-link collapsed" data-toggle="collapse" data-target="#collapseOne" aria-expanded="false" aria-controls="collapseOne">Why do I need to create an account, and how do I create one?</button>
 			</div>
 		</div>
 		<!-- /.card-header -->
@@ -21,7 +21,7 @@
 	<div class="card">
 		<div class="card-header" id="headingTwo">
 			<div class="h5 mb-0">
-				<button class="btn btn-link" data-toggle="collapse" data-target="#collapseTwo" aria-expanded="false" aria-controls="collapseTwo">How do I find the location and/or schedule of my class, print my certificate of completion, or find a listing of classes that I have completed?</button>
+				<button class="btn btn-link collapsed" data-toggle="collapse" data-target="#collapseTwo" aria-expanded="false" aria-controls="collapseTwo">How do I find the location and/or schedule of my class, print my certificate of completion, or find a listing of classes that I have completed?</button>
 			</div>
 		</div>
 		<!-- /.card-header -->
@@ -40,7 +40,7 @@
 	<div class="card">
 		<div class="card-header" id="headingThree">
 			<div class="h5 mb-0">
-				<button class="btn btn-link" data-toggle="collapse" data-target="#collapseThree" aria-expanded="false" aria-controls="collapseThree">How can I find more information about an instructor?</button>
+				<button class="btn btn-link collapsed" data-toggle="collapse" data-target="#collapseThree" aria-expanded="false" aria-controls="collapseThree">How can I find more information about an instructor?</button>
 			</div>
 		</div>
 		<!-- /.card-header -->
@@ -59,7 +59,7 @@
 	<div class="card">
 		<div class="card-header" id="headingFour">
 			<div class="h5 mb-0">
-				<button class="btn btn-link" data-toggle="collapse" data-target="#collapseFour" aria-expanded="false" aria-controls="collapseFour">How do I purchase a class for someone else?</button>
+				<button class="btn btn-link collapsed" data-toggle="collapse" data-target="#collapseFour" aria-expanded="false" aria-controls="collapseFour">How do I purchase a class for someone else?</button>
 			</div>
 		</div>
 		<!-- /.card-header -->
@@ -78,7 +78,7 @@
 	<div class="card">
 		<div class="card-header" id="headingFive">
 			<div class="h5 mb-0">
-				<button class="btn btn-link" data-toggle="collapse" data-target="#collapseFive" aria-expanded="false" aria-controls="collapseFive">How do I get a receipt for a class that I purchased?</button>
+				<button class="btn btn-link collapsed" data-toggle="collapse" data-target="#collapseFive" aria-expanded="false" aria-controls="collapseFive">How do I get a receipt for a class that I purchased?</button>
 			</div>
 		</div>
 		<!-- /.card-header -->
@@ -97,7 +97,7 @@
 	<div class="card">
 		<div class="card-header" id="headingSix">
 			<div class="h5 mb-0">
-				<button class="btn btn-link" data-toggle="collapse" data-target="#collapseSix" aria-expanded="false" aria-controls="collapseSix">Does Emory Continuing Education offer any online courses?</button>
+				<button class="btn btn-link collapsed" data-toggle="collapse" data-target="#collapseSix" aria-expanded="false" aria-controls="collapseSix">Does Emory Continuing Education offer any online courses?</button>
 			</div>
 		</div>
 		<!-- /.card-header -->
@@ -116,7 +116,7 @@
 	<div class="card">
 		<div class="card-header" id="headingSeven">
 			<div class="h5 mb-0">
-				<button class="btn btn-link" data-toggle="collapse" data-target="#collapseSeven" aria-expanded="false" aria-controls="collapseSeven">How do I select electives if I am enrolled in a certificate program?</button>
+				<button class="btn btn-link collapsed" data-toggle="collapse" data-target="#collapseSeven" aria-expanded="false" aria-controls="collapseSeven">How do I select electives if I am enrolled in a certificate program?</button>
 			</div>
 		</div>
 		<!-- /.card-header -->
@@ -135,7 +135,7 @@
 	<div class="card">
 		<div class="card-header" id="headingEight">
 			<div class="h5 mb-0">
-				<button class="btn btn-link" data-toggle="collapse" data-target="#collapseEight" aria-expanded="false" aria-controls="collapseEight">Will I get credit towards my degree if I take these classes?</button>
+				<button class="btn btn-link collapsed" data-toggle="collapse" data-target="#collapseEight" aria-expanded="false" aria-controls="collapseEight">Will I get credit towards my degree if I take these classes?</button>
 			</div>
 		</div>
 		<!-- /.card-header -->
@@ -154,7 +154,7 @@
 	<div class="card">
 		<div class="card-header" id="headingNine">
 			<div class="h5 mb-0">
-				<button class="btn btn-link" data-toggle="collapse" data-target="#collapseNine" aria-expanded="false" aria-controls="collapseNine">I am a CDC employee. How can I use my ILA to pay for my classes?</button>
+				<button class="btn btn-link collapsed" data-toggle="collapse" data-target="#collapseNine" aria-expanded="false" aria-controls="collapseNine">I am a CDC employee. How can I use my ILA to pay for my classes?</button>
 			</div>
 		</div>
 		<!-- /.card-header -->
@@ -173,7 +173,7 @@
 	<div class="card">
 		<div class="card-header" id="headingTen">
 			<div class="h5 mb-0">
-				<button class="btn btn-link" data-toggle="collapse" data-target="#collapseTen" aria-expanded="false" aria-controls="collapseTen">I am a veteran, how can I find information on which classes I can attend with my VA benefits?</button>
+				<button class="btn btn-link collapsed" data-toggle="collapse" data-target="#collapseTen" aria-expanded="false" aria-controls="collapseTen">I am a veteran, how can I find information on which classes I can attend with my VA benefits?</button>
 			</div>
 		</div>
 		<!-- /.card-header -->
@@ -192,7 +192,7 @@
 	<div class="card">
 		<div class="card-header" id="headingEleven">
 			<div class="h5 mb-0">
-				<button class="btn btn-link" data-toggle="collapse" data-target="#collapseEleven" aria-expanded="false" aria-controls="collapseEleven">What are the steps to become an instructor?</button>
+				<button class="btn btn-link collapsed" data-toggle="collapse" data-target="#collapseEleven" aria-expanded="false" aria-controls="collapseEleven">What are the steps to become an instructor?</button>
 			</div>
 		</div>
 		<!-- /.card-header -->
@@ -219,7 +219,7 @@
 	<div class="card">
 		<div class="card-header" id="headingTwelve">
 			<div class="h5 mb-0">
-				<button class="btn btn-link" data-toggle="collapse" data-target="#collapseTwelve" aria-expanded="false" aria-controls="collapseTwelve">How can I purchase a class using a Smartkey?</button>
+				<button class="btn btn-link collapsed" data-toggle="collapse" data-target="#collapseTwelve" aria-expanded="false" aria-controls="collapseTwelve">How can I purchase a class using a Smartkey?</button>
 			</div>
 		</div>
 		<!-- /.card-header -->
@@ -238,7 +238,7 @@
 	<div class="card">
 		<div class="card-header" id="headingThirteen">
 			<div class="h5 mb-0">
-				<button class="btn btn-link" data-toggle="collapse" data-target="#collapseThirteen" aria-expanded="false" aria-controls="collapseThirteen">How do I get my Emory Staff/Employee Discount?</button>
+				<button class="btn btn-link collapsed" data-toggle="collapse" data-target="#collapseThirteen" aria-expanded="false" aria-controls="collapseThirteen">How do I get my Emory Staff/Employee Discount?</button>
 			</div>
 		</div>
 		<!-- /.card-header -->
@@ -257,7 +257,7 @@
 	<div class="card">
 		<div class="card-header" id="headingFourteen">
 			<div class="h5 mb-0">
-				<button class="btn btn-link" data-toggle="collapse" data-target="#collapseFourteen" aria-expanded="false" aria-controls="collapseFourteen">Do I have to be an Emory student or Alum to attend the classes?</button>
+				<button class="btn btn-link collapsed" data-toggle="collapse" data-target="#collapseFourteen" aria-expanded="false" aria-controls="collapseFourteen">Do I have to be an Emory student or Alum to attend the classes?</button>
 			</div>
 		</div>
 		<!-- /.card-header -->
@@ -276,7 +276,7 @@
 	<div class="card">
 		<div class="card-header" id="headingFifteen">
 			<div class="h5 mb-0">
-				<button class="btn btn-link" data-toggle="collapse" data-target="#collapseFifteen" aria-expanded="false" aria-controls="collapseFifteen">Where is the schedule and/or price for certificate?</button>
+				<button class="btn btn-link collapsed" data-toggle="collapse" data-target="#collapseFifteen" aria-expanded="false" aria-controls="collapseFifteen">Where is the schedule and/or price for certificate?</button>
 			</div>
 		</div>
 		<!-- /.card-header -->
@@ -295,7 +295,7 @@
 	<div class="card">
 		<div class="card-header" id="headingSixteen">
 			<div class="h5 mb-0">
-				<button class="btn btn-link" data-toggle="collapse" data-target="#collapseSixteen" aria-expanded="false" aria-controls="collapseSixteen">What Au Pair electives are available?</button>
+				<button class="btn btn-link collapsed" data-toggle="collapse" data-target="#collapseSixteen" aria-expanded="false" aria-controls="collapseSixteen">What Au Pair electives are available?</button>
 			</div>
 		</div>
 		<!-- /.card-header -->
@@ -314,7 +314,7 @@
 	<div class="card">
 		<div class="card-header" id="headingSeventeen">
 			<div class="h5 mb-0">
-				<button class="btn btn-link" data-toggle="collapse" data-target="#collapseSeventeen" aria-expanded="false" aria-controls="collapseSeventeen">When will the next ECE catalog be available?</button>
+				<button class="btn btn-link collapsed" data-toggle="collapse" data-target="#collapseSeventeen" aria-expanded="false" aria-controls="collapseSeventeen">When will the next ECE catalog be available?</button>
 			</div>
 		</div>
 		<!-- /.card-header -->
@@ -333,7 +333,7 @@
 	<div class="card">
 		<div class="card-header" id="headingEighteen">
 			<div class="h5 mb-0">
-				<button class="btn btn-link" data-toggle="collapse" data-target="#collapseEighteen" aria-expanded="false" aria-controls="collapseEighteen">What are the OLLI dates for 2017?</button>
+				<button class="btn btn-link collapsed" data-toggle="collapse" data-target="#collapseEighteen" aria-expanded="false" aria-controls="collapseEighteen">What are the OLLI dates for 2017?</button>
 			</div>
 		</div>
 		<!-- /.card-header -->
