--- a/src/njk/pages/courses.njk
+++ b/src/njk/pages/courses.njk
@@ -26,7 +26,7 @@
 				<!-- Subject Cards -->
 				<div class="card-icons card-icons--subjects">
 					<a href="search.html" class="card-icons__link">
-						<img src="{{ includePath }}images/icons/smile-w.svg" alt="" class="img-fluid card-icons__icon" />
+						<img src="{{ includePath }}images/icons/users-w.svg" alt="" class="img-fluid card-icons__icon" />
 						<div class="card-icons__text">Management and Supervision</div>
 					</a>
 					<a href="search.html" class="card-icons__link">
@@ -46,7 +46,7 @@
 						<div class="card-icons__text">Microsoft Office</div>
 					</a>
 					<a href="search.html" class="card-icons__link">
-						<img src="{{ includePath }}images/icons/leaf-b.svg" alt="" class="img-fluid card-icons__icon" />
+						<img src="{{ includePath }}images/icons/leaf-w.svg" alt="" class="img-fluid card-icons__icon" />
 						<div class="card-icons__text">Personal Enrichment</div>
 					</a>
 					<a href="search.html" class="card-icons__link">
