--- a/src/njk/pages/index.njk
+++ b/src/njk/pages/index.njk
@@ -84,6 +84,27 @@
 					{% include "partials/component/feed-news.njk" %}
 				</div>
 
+				<div class="row">
+					<div class="col">
+						<div class="cta bg-facets-gray">
+							<div class="row align-items-center justify-content-between">
+								<div class="col-md-6 col-lg-8">
+									<h2 class="cta__text">Interested in becoming an instructor?</h2>
+								</div>
+								<!-- /.col-lg-8 -->
+								<div class="col-md-6 col-lg-4">
+									<a href="#" class="btn btn-primary btn-lg btn-block">Submit a Proposal</a>
+								</div>
+								<!-- /.col-lg-4 -->
+							</div>
+							<!-- /.row .align-items-center -->
+						</div>
+						<!-- /.cta .bg-facets-gray -->
+					</div>
+					<!-- /.col -->
+				</div>
+				<!-- /.row -->
+
             </div>
             <!-- /.container -->
         </div>
