--- a/src/njk/templates/partials/component/card-icons.njk
+++ b/src/njk/templates/partials/component/card-icons.njk
@@ -20,7 +20,7 @@
         <div class="card-icons__text">Corporate Training</div>
     </a>
 	<a href="#" class="card-icons__link">
-        <img src="{{ includePath }}images/icons/star-b.svg" alt="" class="img-fluid card-icons__icon" />
+        <img src="{{ includePath }}images/icons/star-w.svg" alt="" class="img-fluid card-icons__icon" />
         <div class="card-icons__text">Military Service Members</div>
     </a>
 </div>
