--- a/src/njk/templates/partials/component/cta.njk
+++ b/src/njk/templates/partials/component/cta.njk
@@ -3,7 +3,7 @@
         <div class="cta bg-facets-gray">
             <div class="row align-items-center justify-content-between">
                 <div class="col-md-6 col-lg-8">
-                    <h2 class="cta__text">Cant't find it? Reach out.</h2>
+                    <h2 class="cta__text">Can’t find it? Reach out.</h2>
                 </div>
                 <!-- /.col-lg-8 -->
                 <div class="col-md-6 col-lg-4">
